# e21-3yp-Drivora

./: COMPLETE_UPGRADE_SUMMARY.md  README.md  analysis_options.yaml  flutter_run.bat  pubspec.yaml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
code/firmware/CenterUnit/src/: main.cpp
code/firmware/CenterUnit/tools/: cog_risk_visualizer.py
code/firmware/FrontUnit/: platformio.ini
code/firmware/FrontUnit/src/: main.cpp
code/firmware/MainHub/: CMakeLists.txt  main.cpp  platformio.ini
code/firmware/MainHub/CamUnit/: Lane_dep_V4.py  Lane_departure_V4.py  Lane_departure_V5.py  e21-3yp-Drivora.code-workspace
code/firmware/MainHub/CamUnit/Modules_saved/: LaneDetector.cpp  main.cpp
code/firmware/MainHub/CamUnit/include/: LaneClassifier.h
code/firmware/MainHub/CamUnit/src/: LaneClassifier.cpp  main.cpp
code/firmware/MainHub/ESP32_Brain/: can_protocol.md  data_model_ui_flow.md  platformio.ini
code/firmware/MainHub/ESP32_Brain/src/: main.cpp
code/firmware/MainHub/RPi_Brain/: CMakeLists.txt  index.html  main.cpp
code/firmware/MainHub/include/: LaneClassifier.h  LaneDetector.h  LaneDetector.hpp
code/firmware/MainHub/src/: LaneClassifier.cpp  LaneDetector.cpp  main.cpp
code/firmware/RearUnit/: platformio.ini
code/firmware/RearUnit/src/: main.cpp
code/software/: .flutter-plugins-dependencies  .gitignore  local.properties.template
code/software/drivora/: .env.web  .gitignore  API_REFERENCE.md  CLOUD_SERVER_SETUP.md  FIXES_APPLIED.md  IMPLEMENTATION_CHECKLIST.md  README.md  UPGRADE_GUIDE.md  analysis_options.yaml  build.yaml  firebase.json  generate_icon.py  generate_icon_v2.py  out.txt  out2.txt  pubspec.yaml  runtimecommand.md
code/software/drivora/android/: build.gradle.kts  gradle.properties
code/software/drivora/android/app/: build.gradle.kts  google-services.json
code/software/drivora/assets/: raw_sensor_data.json
code/software/drivora/dataconnect/: dataconnect.yaml
code/software/drivora/dataconnect/schema/: schema.gql
code/software/drivora/docs/: README.md
code/software/drivora/lib/: firebase_options.dart  main.dart
code/software/drivora/lib/models/: sensor_data.dart
code/software/drivora/lib/providers/: user_provider.dart
code/software/drivora/lib/screens/: account_screen.dart  alert_history_screen.dart  map_screen.dart  (+13 more)
code/software/drivora/test/: widget_test.dart
code/software/drivora/web/: index.html
docs/: README.md  index.html  script.js  styles.css
docs/admin-dashboard/: README.md  app.js  firebase-config.js  index.html  styles.css
docs/data/: index.json
lib/: main.dart
lib/models/: sensor_data.dart
lib/screens/: alerts_screen.dart  analytics_screen.dart  dashboard_screen.dart  map_screen.dart  registration_screen.dart  settings_screen.dart
lib/services/: wifi_sensor_service.dart
lib/theme/: app_theme.dart
lib/widgets/: car_3d_visualization.dart  dashboard_widgets.dart
web/: index.html
(+13 files in other folders)
